@@ -8,6 +8,8 @@ SilcClient i_silc_client_init(void);
 void i_silc_client_deinit(SilcClient client, SilcClientConnection conn);
 
 void i_silc_client_nickname_parse(const char *nickname, char **return_nickname);
+bool i_silc_client_id_is_me(struct i_silc_gateway_connection *silc_gwconn,
+				SilcClientID *id);
 
 #define SILC_PUBKEY "silc.pub"
 #define SILC_PRVKEY "silc.prv"
